--- a/style.css
+++ b/style.css
@@ -841,11 +841,11 @@ h1.ml7.text-wrapper {
         background-image: url('./img/schoolm.jpg');
         min-height: 300px;
         background-position: center;
-        background-size: contain;
+        background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        /* width: 100%;
-        max-width: 575px;
+        width: 20%;
+       /*  max-width: 575px;
         min-height: 400px; */
 
 /* 
