--- a/style.css
+++ b/style.css
@@ -838,7 +838,7 @@ h1.ml7.text-wrapper {
         height: 3rem;
     }
     .bgimg-1 {
-        background-image: url('./img/schoolm.jpg');
+        background-image: url('./img/s.jpg');
         min-height: 300px;
         background-position: center;
         background-size: cover;
