--- a/style.css
+++ b/style.css
@@ -842,9 +842,9 @@ h1.ml7.text-wrapper {
         min-height: 300px;
         background-position: center;
         background-size: cover;
+        -webkit-background-size: cover;
         background-repeat: no-repeat;
         background-attachment: fixed;
-        width: 300px;
        /*  max-width: 575px;
         min-height: 400px; */
 
