--- a/style.css
+++ b/style.css
@@ -844,7 +844,7 @@ h1.ml7.text-wrapper {
         background-size: cover;
         -webkit-background-size: cover;
         background-repeat: no-repeat;
-        background-attachment: fixed;
+        background-attachment: scroll;
        /*  max-width: 575px;
         min-height: 400px; */
 
