--- a/style.css
+++ b/style.css
@@ -856,7 +856,8 @@ h1.ml7.text-wrapper {
         background-image: url('./img/routem.jpg');
         /* width: 100%; */
         min-height: 400px;
-        background-attachment: scroll;
+        background-attachment: fixed !important;
+        background-size: cover !important;
     }
     .bgimg-3 {
         background-image: url('./img/skillsm.jpg');
