--- a/style.css
+++ b/style.css
@@ -838,15 +838,23 @@ h1.ml7.text-wrapper {
         height: 3rem;
     }
     .bgimg-1 {
-        background-image: url('./img/schoolm.jpg');
+        /* background-image: url('./img/schoolm.jpg');
         min-height: 300px;
         background-attachment: fixed !important;
-background-size: cover !important;
+background-size: cover !important; */
        /*  max-width: 575px;
         min-height: 400px; */
 
 /* 
         opacity: 0.5; */
+
+        position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background: url('./img/schoolm.jpg') 0 0 no-repeat fixed !important;
+    background-size:contain;
     
     }
     .bgimg-2 {
