--- a/style.css
+++ b/style.css
@@ -848,11 +848,11 @@ background-size: cover !important; */
 /* 
         opacity: 0.5; */
 
-        position:fixed;
+        /* position:fixed;
     top:0;
     left:0;
     width:100%;
-    height:100%;
+    height:100%; */
     background: url('./img/schoolm.jpg') 0 0 no-repeat fixed !important;
     background-size:contain;
     
