--- a/style.css
+++ b/style.css
@@ -838,10 +838,10 @@ h1.ml7.text-wrapper {
         height: 3rem;
     }
     .bgimg-1 {
-        /* background-image: url('./img/schoolm.jpg');
+        background-image: url('./img/schoolm.jpg');
         min-height: 300px;
-        background-attachment: fixed !important;
-background-size: cover !important; */
+        background-attachment: initial;
+background-size: cover !important;
        /*  max-width: 575px;
         min-height: 400px; */
 
@@ -852,9 +852,9 @@ background-size: cover !important; */
     top:0;
     left:0;
     width:100%;
-    height:100%; */
+    height:100%; 
     background: url('./img/schoolm.jpg') 0 0 no-repeat fixed !important;
-    background-size:contain;
+    background-size:contain;*/
     
     }
     .bgimg-2 {
